css/styles.css
/* Global Style */
body {
    font-family: 'Karla', Verdana, sans-serif;
    color: #333;
    letter-spacing: 0.4px;
    font-size: 18px;
    background-color: #fffbfb;
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 1200px;
    width: 70%;
    margin: 0 auto;
    gap: 17vh;
}

button {
    width: 27%;
    max-width: 200px;
    background-color: #f05776;
    color: white;
    border-radius: 5px;
    border: none;
    padding: 10px;
    cursor: pointer;
}

/* Hero Section */
#hero {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    margin: 23vh 0 39vh 0;
}

#intro-hero {
    flex: 2;
}

#intro-hero h1 {
    display: block;
    margin-bottom: 20px;
    font-size: 35px;
    color: #f05776;
}

#image-hero {
    flex: 1;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-right: 30px;
}

#image-hero img {
    width: 260px;
    height: 260px;
    border-radius: 50%;
    box-shadow: 0 6px 14px rgba(0, 0,0, 0.1);
}

#scroll-down {
    display: flex;
    justify-content: center;
}

#scroll-down img {
    width: 30px;
    height: 30px;
    animation: bounce 2s infinite;
    cursor: pointer;
}

@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0);
    }
    40% {
        transform: translateY(-14px);
    }
    60% {
        transform: translateY(-8px);
    }
}

/* Projects */
.card-project {
    display: block;
    background-color: #ffffff;
    padding: 50px 120px;
    border-radius: 5px;
    box-shadow: 0 6px 14px rgba(0, 0,0, 0.2);
    max-width: 100%;
    width: 70vw;
    margin: 0 auto;
    box-sizing: border-box;
}

.card-project p {
    margin-bottom: 0;
}

.tools {
    margin: 0 20px 20px 0;
}

.tools p {
    border: 2px solid #ff7396;
    display: inline-block;
    padding: 4px;
    border-radius: 10px;
    margin-right: 7px;
}

.button-project {
    width: auto;
    max-width: 200px;
    margin-right: 6px;
}

/* About Me */
#about-me h2 {
    margin-bottom: 0;
}

#about-me-content {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    gap: 50px
}

#text-aboutme {
    flex: 1;
}

#image-aboutme {
    flex: 1;
    display: flex;
    justify-content: center;
}

#image-aboutme img {
    width: 100%;
    max-width: 450px;
    height: auto;
    border-radius: 10px;;
}

/* Toolkit */
#toolkit h2 {
    margin-bottom: 30px;
}

#skill-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 35px
}

.skill {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}
.skill img {
    margin-bottom: 10px;
}

#bubble-icon {
    margin: 13px;
}

/* Let's Connect */
#connect {
    display: flex;
    gap: 15%;
    justify-content: center;
    margin-bottom: 25vh;
}

#connect h2 {
    margin-bottom: 20px;
}

.column {
    display: flex;
    flex-direction: column;
}

#button-row {
    display: flex;
    gap: 5vw;
    justify-content: center;
}

textarea {
    width: 80vw;
    min-width: 450px;
    max-width: 530px;
    border: 2px solid #f057754a;
    border-radius: 6px;
}

.small-textarea {
    height: 30px;
}

.big-textarea {
    height: 175px
}

#right-connect {
    gap: 20px;
}

/* Screens <= 900px */

@media (max-width: 900px) {
    #hero {
        flex-direction: column;
        gap: 30px;
        margin: 15vh 0 17vh 0;
    }

    #image-hero img {
        width: 250px;
        height: 250px;
    }
    #about-me-content {
        flex-direction: column;
        gap: 30px;
    }

    #image-aboutme img {
        max-width: 60vw;
    }
}

/* Screens <= 768px */
@media (max-width: 768px) {
    body {
        width: 95%;
        gap: 10vh;
        font-size: 17px;
    }

    #hero {
        margin: 10vh 0 22vh 0;
    }

    #about-me-content {
        flex-direction: column;
        gap: 20px;
    }

    #connect {
        flex-direction: column;
        gap: 40px;
        margin-bottom: 15vh;
    }

    #button-row {
        gap: 15vw;
        justify-content: center;
    }

    textarea {
        width: 94vw;
        max-width: 94vw;
    }

    .card-project {
        padding: 30px;
        width: 90vw;
    }

    #skill-container {
        gap: 20px;
    }
}

